--- a/challenges/todolist_ans.html
+++ b/challenges/todolist_ans.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
   </head>
   <body class="has-text-centered">
-    <!-- <progress class="progress is-primary" value="0" max="100">0</progress>
+    <progress class="progress is-primary" value="0" max="100">0</progress>
     <nav class="level">
       <div class="level-item">
         <div>
@@ -23,7 +23,7 @@
       <div class="level-item">
         <a class="button" id="remove-all">Remove All Tasks</a>
       </div>
-    </nav> -->
+    </nav>
 
     <button class="btn" type="button" name="button"></button>
 
