Completed auth chall

--- a/challenges/Language Selector.htm
+++ b/challenges/Language Selector.htm
@@ -34,7 +34,7 @@
       if (currentlySelected) {
         currentlySelected.classList = '';
       }
-      document.cookie = ''=''
+      // document.cookie = ''=''
 
       // Add the 'selected' class to the link so it turns bold!
       event.target.classList = 'selected';
