--- a/challenges/promises.html
+++ b/challenges/promises.html
@@ -16,7 +16,7 @@
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
-            Rhandom
+            Random
           </h1>
           <h2 class="subtitle">
             Gettin' some randoms
