--- a/challenges/jquery_1_todolist_ans.html
+++ b/challenges/jquery_1_todolist_ans.html
@@ -62,7 +62,7 @@
 
         // Set the input value back to empty after we add a task
         $('form input').val('');
-@@ -70,6 +74,11 @@ <h1 class="title is-1">0</h1>
+        <h1 class="title is-1">0</h1>
         const completedTasks = $('#tasks div.notification.is-primary').length;
         $('progress').val((completedTasks/totalTasks) * 100);
       }
